Actualización de archivos existentes con modificaciones recientes

--- a/config.json
+++ b/config.json
@@ -1,13 +1,13 @@
 {
-    "input_path": "/media/ricardo/Datos/Project_GastricMorphometry/input_data",
-    "processed_path": "/media/ricardo/Datos/Project_GastricMorphometry/processed_data",
+    "input_path": "input_data",
+    "processed_path": "processed_data",
     "patch_size": 1536,
     "batch_size": 100,
     "high_resol": false,
     "img_normalize": true,
-    "sam_checkpoint": "/media/ricardo/Datos/Project_GastricMorphometry/src/utils/segment-anything/checkpoints/sam_vit_h_4b8939.pth",
+    "sam_checkpoint": "src/utils/segment-anything/checkpoints/sam_vit_h_4b8939.pth",
     "model_type": "vit_h",
-    "device": "cuda:0",
+    "device": "cuda:1",
     "matlab_path": "/data/Gland-Segmentation/",
     "matlab_function": "NormalizacionColor_registro",
     "output_subfolder_normalized": "Dataset_Normalized",
