--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
-    "input_path": "input_data",
-    "processed_path": "processed_data",
+    "input_path": "/data/ricardo/dataMetaplasiaCompletaIncompleta/Slides/",
+    "processed_path": "processed_data_gland_type/",
     "patch_size": 1536,
     "batch_size": 100,
     "high_resol": false,
@@ -12,12 +12,14 @@
     "matlab_function": "NormalizacionColor_registro",
     "output_subfolder_normalized": "Dataset_Normalized",
     "final_output": "final_output",
-    "svs_subfolder": "images",
+    "svs_subfolder": "HE",
     "xml_subfolder": "annotations",
     "suffix_corrected": "_corrected.xml",
     "suffix_completed": "_completed.xml",
     "suffix_final": "_corrected_final.xml",
-    "log_path": "logs"
+    "log_path": "logs",
+    "unet_weight_path": "weights/best_weight.pth",
+    "unet_encoder": "resnet18"
 }
 
 
